testando public files

--- a/server/pages/index.html
+++ b/server/pages/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 
-    <link href="teste.css" rel="stylesheet">
+    <link href="/teste.css" rel="stylesheet">
 </head>
 <body>
     <h1>Testando funcionalidades</h1>
