--- a/server/pages/enigma.html
+++ b/server/pages/enigma.html
@@ -3,6 +3,14 @@
 <head>
 </head>
 <body>
-  teste
+  Parabéns por ter descoberto o primeiro enigma dos macacos!!!
+  <br>
+  você sabia que tem uma cascavel na veterinária?
+  <br>
+  próximo desafio:
+  <br>
+  nem todo chocalho faz barulho!
+  <br><br>
+  <br>
   </body>
 </html>
