--- a/server/pages/enigma.html
+++ b/server/pages/enigma.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
+  <center>
   Parabéns por ter descoberto o primeiro enigma dos macacos!!!
   <br>
   você sabia que tem uma cascavel na veterinária?
@@ -12,5 +13,9 @@
   nem todo chocalho faz barulho!
   <br><br>
   <br>
+  </center>
+
+  <img src="https://imgur.com/lKqZw7x">
+
   </body>
 </html>
