--- a/server/pages/enigma.html
+++ b/server/pages/enigma.html
@@ -15,7 +15,7 @@
   <br>
   </center>
 
-  <img src="https://imgur.com/lKqZw7x">
+  <img src="https://i.imgur.com/lKqZw7x.jpeg">
 
   </body>
 </html>
