--- a/server/pages/enigma.html
+++ b/server/pages/enigma.html
@@ -8,7 +8,7 @@
   <br>
   você sabia que tem uma cascavel na veterinária?
   <br>
-  próximo desafio:
+  próximo enigma:
   <br>
   nem todo chocalho faz barulho!
   <br><br>
